<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sms"
    tools:context=".SmsActivity">

    <EditText
        android:id="@+id/phoneNumEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/top_margin"
        android:background="@drawable/rectangle"
        android:padding="5dp"
        android:layout_marginEnd="5dp"/>

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_message"
        app:layout_constraintStart_toStartOf="@+id/phoneNumEditText"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumEditText"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:padding="5dp"
        android:layout_marginEnd="5dp"/>

    <Button
        android:id="@+id/webBackToMain"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/top_margin" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_message_24"
        app:layout_constraintEnd_toEndOf="@id/messageEditText"
        app:layout_constraintTop_toBottomOf="@id/messageEditText"
        android:background="@drawable/rectangle"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/smsBackToMain"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/top_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>